--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.3",
-    "mongoose": "^6.2.3"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.3",
+    "typescript": "^4.5.5"
   },
   "name": "api-blog",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
